LiveText-LiveText3.14/src/objects/Conversation_Event__c.object
<CustomObject>
    <fields>
        <fullName>Conversation_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Text Session Header</label>
        <referenceTo>Conversation_Header__c</referenceTo>
        <relationshipLabel>Conversation Events</relationshipLabel>
        <relationshipName>Conversation_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Object__c</fullName>
        <label>Linked_Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Conversation Event</label>
    <nameField>
        <label>Conversation Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>